@startuml Flappy Bird

class Bird {
    - int estadoAnimacion
    - int timerEstado
    - bool iniciado
    - bool vivo
    - std::vector<sf::Texture> estados
    - sf::Sprite sprite
    - float move
    
    + Bird(int, int)
    + void Update()
    + void Saltar()
    + void Morir()
    + bool GetLive()
    + sf::Vector2f Getposition()
    + void Initiated()
    + void draw(sf::RenderTarget &, sf::RenderStates) const
}

class Juego{
    
}

class Parallax {
    - int last
    - int score
    - bool initiated
    - sf::Texture tuboTexture
    - sf::Texture baseTexture
    - std::vector<sf::Sprite> bases
    - std::vector<Tubo> tubos
    
    + Parallax()
    + void Update()
    + bool Collision(sf::IntRect)
    + void Initiated()
    + int ConsultScore()
    + void draw(sf::RenderTarget &, sf::RenderStates) const
}

class Tubo {
    - sf::Sprite upSprite
    - sf::Sprite downSprite
    
    + Tubo(sf::Texture&, int, int)
    + void Update()
    + bool Collision(sf::IntRect)
    + sf::Vector2f GetPosition()
    + void draw(sf::RenderTarget&, sf::RenderStates) const
}

class UISound {
    - sf::SoundBuffer pointB
    - sf::SoundBuffer wingB
    - sf::SoundBuffer hitB
    - sf::Sound point
    - sf::Sound wing
    - sf::Sound hit
    - sf::Music music
    - sf::Font font
    - sf::Text maxScoreT
    - sf::Text scoreT
    - int maxScore
    - int score
    - bool initiated
    - bool gameOver
    - sf::Texture gameOverT
    - sf::Sprite gameOverS
    - sf::Texture initT
    - sf::Sprite initS
    
    + UISound()
    + void SetScore(int)
    + void Initiated(bool)
    + void GameOver()
    + void Wing()
    + void draw(sf::RenderTarget&, sf::RenderStates) const
}

Bird --|> sf::Drawable
Parallax --|> sf::Drawable
Tubo --|> sf::Drawable
UISound --|> sf::Drawable

Parallax "1" *-- "many" Tubo : contiene
Parallax "1" *-- "many" sf::Sprite : contiene

Bird "1" *-- "many" sf::Texture : usa
Bird "1" *-- "1" sf::Sprite : tiene

UISound "1" o-- "many" sf::SoundBuffer : usa
UISound "1" o-- "1" sf::Music : tiene
UISound "1" o-- "1" sf::Font : usa
UISound "1" o-- "2" sf::Text : tiene
UISound "1" o-- "2" sf::Sprite : tiene

@enduml
